--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/bcryptjs": "^2.4.6",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -48,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.47.0",
     "next": "16.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "latest",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
