implement sensor data API with Prisma SQLite integration and update environment and documentation.

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ AZURE_VISION_REGION=eastus
 
 # Text Embedding (for future use)
 AZURE_EMBEDDING_DEPLOYMENT=text-embedding-ada-002
+
+# Database (Prisma SQLite)
+DATABASE_URL="file:./dev.db"
